load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "async",
    srcs = [
        "debounce.go",
        "every.go",
        "multilock.go",
        "scatter.go",
    ],
    importpath = "github.com/theQRL/qrysm/async",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sirupsen_logrus//:logrus"],
)

go_test(
    name = "async_test",
    srcs = [
        "benchmark_test.go",
        "debounce_test.go",
        "every_test.go",
        "multilock_test.go",
        "scatter_test.go",
    ],
    embed = [":async"],
    deps = [
        "//testing/assert",
        "//testing/require",
        "//testing/util",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_stretchr_testify//assert",
    ],
)
