load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "cmd",
    srcs = [
        "config.go",
        "defaults.go",
        "flags.go",
        "helpers.go",
        "password_reader.go",
        "wrap_flags.go",
    ],
    importpath = "github.com/theQRL/qrysm/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//config/fieldparams",
        "//config/params",
        "//io/file",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_urfave_cli_v2//:cli",
        "@com_github_urfave_cli_v2//altsrc",
        "@org_golang_x_crypto//ssh/terminal",
    ],
)

go_test(
    name = "cmd_test",
    size = "small",
    srcs = [
        "config_test.go",
        "flags_test.go",
        "helpers_test.go",
    ],
    embed = [":cmd"],
    deps = [
        "//cmd/mock",
        "//config/params",
        "//testing/assert",
        "//testing/require",
        "@com_github_pkg_errors//:errors",
        "@com_github_urfave_cli_v2//:cli",
        "@org_uber_go_mock//gomock",
    ],
)
