load("@qrysm//tools/go:def.bzl", "go_library")

go_library(
    name = "consensus-types",
    srcs = ["types.go"],
    importpath = "github.com/theQRL/qrysm/consensus-types",
    visibility = ["//visibility:public"],
    deps = [
        "//runtime/version",
        "@com_github_pkg_errors//:errors",
    ],
)
