load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "math",
    srcs = ["math_helper.go"],
    importpath = "github.com/theQRL/qrysm/math",
    visibility = ["//visibility:public"],
    deps = ["@com_github_thomaso_mirodin_intmath//u64"],
)

go_test(
    name = "math_test",
    srcs = ["math_helper_test.go"],
    deps = [
        ":math",
        "//testing/require",
    ],
)
