load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "network",
    srcs = [
        "auth.go",
        "endpoint.go",
        "external_ip.go",
    ],
    importpath = "github.com/theQRL/qrysm/network",
    visibility = ["//visibility:public"],
    deps = [
        "//network/authorization",
        "@com_github_golang_jwt_jwt_v4//:jwt",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_theqrl_go_zond//rpc",
    ],
)

go_test(
    name = "network_test",
    srcs = [
        "auth_test.go",
        "endpoint_test.go",
        "external_ip_test.go",
    ],
    embed = [":network"],
    deps = [
        "//encoding/bytesutil",
        "//network/authorization",
        "//testing/assert",
        "//testing/require",
        "@com_github_golang_jwt_jwt_v4//:jwt",
        "@com_github_sirupsen_logrus//hooks/test",
    ],
)
