load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "runtime",
    srcs = ["service_registry.go"],
    importpath = "github.com/theQRL/qrysm/runtime",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sirupsen_logrus//:logrus"],
)

go_test(
    name = "runtime_test",
    srcs = ["service_registry_test.go"],
    embed = [":runtime"],
    deps = [
        "//testing/assert",
        "//testing/require",
    ],
)
