load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "client",
    srcs = [
        "client.go",
        "errors.go",
        "options.go",
    ],
    importpath = "github.com/theQRL/qrysm/api/client",
    visibility = ["//visibility:public"],
    deps = ["@com_github_pkg_errors//:errors"],
)

go_test(
    name = "client_test",
    srcs = ["client_test.go"],
    embed = [":client"],
    deps = ["//testing/require"],
)
