load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "gateway",
    srcs = [
        "gateway.go",
        "log.go",
        "modifiers.go",
        "options.go",
    ],
    importpath = "github.com/theQRL/qrysm/api/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//api/gateway/apimiddleware",
        "//runtime",
        "@com_github_gorilla_mux//:mux",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime",
        "@com_github_pkg_errors//:errors",
        "@com_github_rs_cors//:cors",
        "@com_github_sirupsen_logrus//:logrus",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//connectivity",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "gateway_test",
    srcs = ["gateway_test.go"],
    embed = [":gateway"],
    deps = [
        "//api/gateway/apimiddleware",
        "//cmd/beacon-chain/flags",
        "//testing/assert",
        "//testing/require",
        "@com_github_gorilla_mux//:mux",
        "@com_github_sirupsen_logrus//hooks/test",
        "@com_github_urfave_cli_v2//:cli",
    ],
)
