load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "grpc",
    srcs = [
        "grpcutils.go",
        "parameters.go",
    ],
    importpath = "github.com/theQRL/qrysm/api/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:logrus",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//metadata",
    ],
)

go_test(
    name = "grpc_test",
    srcs = ["grpcutils_test.go"],
    embed = [":grpc"],
    deps = [
        "//testing/assert",
        "//testing/require",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime",
        "@com_github_sirupsen_logrus//hooks/test",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//metadata",
    ],
)
