load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "pagination",
    srcs = ["pagination.go"],
    importpath = "github.com/theQRL/qrysm/api/pagination",
    visibility = ["//visibility:public"],
    deps = [
        "//config/params",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "pagination_test",
    srcs = ["pagination_test.go"],
    deps = [
        ":pagination",
        "//testing/assert",
        "//testing/require",
    ],
)
