load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "abool",
    srcs = ["abool.go"],
    importpath = "github.com/theQRL/qrysm/async/abool",
    visibility = ["//visibility:public"],
)

go_test(
    name = "abool_test",
    srcs = ["abool_test.go"],
    embed = [":abool"],
)
