load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "event",
    srcs = [
        "feed.go",
        "subscription.go",
    ],
    importpath = "github.com/theQRL/qrysm/async/event",
    visibility = ["//visibility:public"],
    deps = ["//time/mclock"],
)

go_test(
    name = "event_test",
    size = "small",
    srcs = [
        "example_feed_test.go",
        "example_scope_test.go",
        "example_subscription_test.go",
        "feed_test.go",
        "subscription_test.go",
    ],
    embed = [":event"],
    deps = [
        "//testing/assert",
        "//testing/require",
    ],
)
