load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "blockchain",
    srcs = [
        "chain_info.go",
        "chain_info_forkchoice.go",
        "currently_syncing_block.go",
        "error.go",
        "execution_engine.go",
        "forkchoice_update_execution.go",
        "head.go",
        "head_sync_committee_info.go",
        "init_sync_process_block.go",
        "lightclient.go",
        "log.go",
        "metrics.go",
        "options.go",
        "process_attestation.go",
        "process_attestation_helpers.go",
        "process_block.go",
        "process_block_helpers.go",
        "receive_attestation.go",
        "receive_block.go",
        "service.go",
        "setup_forkchoice.go",
        "weak_subjectivity_checks.go",
    ],
    importpath = "github.com/theQRL/qrysm/beacon-chain/blockchain",
    visibility = ["//visibility:public"],
    deps = [
        "//async",
        "//async/event",
        "//beacon-chain/cache",
        "//beacon-chain/core/altair",
        "//beacon-chain/core/blocks",
        "//beacon-chain/core/epoch/precompute",
        "//beacon-chain/core/feed",
        "//beacon-chain/core/feed/state",
        "//beacon-chain/core/helpers",
        "//beacon-chain/core/signing",
        "//beacon-chain/core/time",
        "//beacon-chain/core/transition",
        "//beacon-chain/db",
        "//beacon-chain/db/filters",
        "//beacon-chain/db/kv",
        "//beacon-chain/execution",
        "//beacon-chain/forkchoice",
        "//beacon-chain/forkchoice/doubly-linked-tree",
        "//beacon-chain/forkchoice/types",
        "//beacon-chain/operations/attestations",
        "//beacon-chain/operations/slashings",
        "//beacon-chain/operations/voluntaryexits",
        "//beacon-chain/p2p",
        "//beacon-chain/startup",
        "//beacon-chain/state",
        "//beacon-chain/state/stategen",
        "//config/features",
        "//config/fieldparams",
        "//config/params",
        "//consensus-types",
        "//consensus-types/blocks",
        "//consensus-types/interfaces",
        "//consensus-types/payload-attribute",
        "//consensus-types/primitives",
        "//crypto/ml_dsa_87",
        "//encoding/bytesutil",
        "//math",
        "//monitoring/tracing",
        "//proto/engine/v1:engine",
        "//proto/migration",
        "//proto/qrl/v1:qrl",
        "//proto/qrysm/v1alpha1",
        "//proto/qrysm/v1alpha1/attestation",
        "//runtime/version",
        "//time",
        "//time/slots",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_theqrl_go_zond//common",
        "@io_opencensus_go//trace",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "blockchain_test",
    srcs = [
        "blockchain_test.go",
        "chain_info_norace_test.go",
        "chain_info_test.go",
        "checktags_test.go",
        "error_test.go",
        "execution_engine_test.go",
        "forkchoice_update_execution_test.go",
        "head_sync_committee_info_test.go",
        "head_test.go",
        "init_sync_process_block_test.go",
        "init_test.go",
        "lightclient_test.go",
        "log_test.go",
        "metrics_test.go",
        "mock_test.go",
        "process_attestation_test.go",
        "process_block_test.go",
        "receive_attestation_test.go",
        "receive_block_test.go",
        "service_norace_test.go",
        "service_test.go",
        "setup_forkchoice_test.go",
        "setup_test.go",
        "weak_subjectivity_checks_test.go",
    ],
    embed = [":blockchain"],
    deps = [
        "//async/event",
        "//beacon-chain/blockchain/testing",
        "//beacon-chain/cache",
        "//beacon-chain/cache/depositcache",
        "//beacon-chain/core/blocks",
        "//beacon-chain/core/feed/state",
        "//beacon-chain/core/helpers",
        "//beacon-chain/core/signing",
        "//beacon-chain/core/transition",
        "//beacon-chain/db",
        "//beacon-chain/db/testing",
        "//beacon-chain/execution",
        "//beacon-chain/execution/testing",
        "//beacon-chain/forkchoice",
        "//beacon-chain/forkchoice/doubly-linked-tree",
        "//beacon-chain/forkchoice/types",
        "//beacon-chain/operations/attestations",
        "//beacon-chain/operations/slashings",
        "//beacon-chain/operations/voluntaryexits",
        "//beacon-chain/p2p",
        "//beacon-chain/startup",
        "//beacon-chain/state",
        "//beacon-chain/state/state-native",
        "//beacon-chain/state/stategen",
        "//config/features",
        "//config/fieldparams",
        "//config/params",
        "//consensus-types/blocks",
        "//consensus-types/interfaces",
        "//consensus-types/primitives",
        "//container/trie",
        "//encoding/bytesutil",
        "//proto/engine/v1:engine",
        "//proto/qrl/v1:qrl",
        "//proto/qrysm/v1alpha1",
        "//runtime/version",
        "//testing/assert",
        "//testing/require",
        "//testing/util",
        "//time",
        "//time/slots",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_sirupsen_logrus//hooks/test",
        "@com_github_theqrl_go_zond//common",
        "@com_github_theqrl_go_zond//core/types",
        "@org_golang_google_protobuf//proto",
    ],
)
