load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "blockchain",
    srcs = [
        "chain_info.go",
        "chain_info_forkchoice.go",
        "currently_syncing_block.go",
        "error.go",
        "execution_engine.go",
        "forkchoice_update_execution.go",
        "head.go",
        "head_sync_committee_info.go",
        "init_sync_process_block.go",
        "lightclient.go",
        "log.go",
        "metrics.go",
        "options.go",
        "process_attestation.go",
        "process_attestation_helpers.go",
        "process_block.go",
        "process_block_helpers.go",
        "receive_attestation.go",
        "receive_block.go",
        "service.go",
        "setup_forkchoice.go",
        "weak_subjectivity_checks.go",
    ],
    importpath = "github.com/theQRL/qrysm/beacon-chain/blockchain",
    visibility = [
        "//beacon-chain:__subpackages__",
        "//cmd/beacon-chain:__subpackages__",
        "//testing/slasher/simulator:__pkg__",
        "//testing/spectest:__subpackages__",
    ],
    deps = [
        "//async",
        "//async/event",
        "//beacon-chain/cache",
        "//beacon-chain/core/altair",
        "//beacon-chain/core/blocks",
        "//beacon-chain/core/epoch/precompute",
        "//beacon-chain/core/feed",
        "//beacon-chain/core/feed/state",
        "//beacon-chain/core/helpers",
        "//beacon-chain/core/signing",
        "//beacon-chain/core/time",
        "//beacon-chain/core/transition",
        "//beacon-chain/db",
        "//beacon-chain/db/filters",
        "//beacon-chain/db/kv",
        "//beacon-chain/execution",
        "//beacon-chain/forkchoice",
        "//beacon-chain/forkchoice/doubly-linked-tree",
        "//beacon-chain/forkchoice/types",
        "//beacon-chain/operations/attestations",
        "//beacon-chain/operations/slashings",
        "//beacon-chain/operations/voluntaryexits",
        "//beacon-chain/p2p",
        "//beacon-chain/startup",
        "//beacon-chain/state",
        "//beacon-chain/state/stategen",
        "//config/features",
        "//config/fieldparams",
        "//config/params",
        "//consensus-types",
        "//consensus-types/blocks",
        "//consensus-types/interfaces",
        "//consensus-types/payload-attribute",
        "//consensus-types/primitives",
        "//crypto/ml_dsa_87",
        "//encoding/bytesutil",
        "//math",
        "//monitoring/tracing",
        "//proto/engine/v1:engine",
        "//proto/migration",
        "//proto/qrl/v1:qrl",
        "//proto/qrysm/v1alpha1",
        "//proto/qrysm/v1alpha1/attestation",
        "//runtime/version",
        "//time",
        "//time/slots",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_theqrl_go_zond//common",
        "@io_opencensus_go//trace",
        "@org_golang_x_sync//errgroup",
    ],
)

test_suite(
    name = "go_default_test",
    tests = [
        ":go_raceoff_test",
        ":go_raceon_test",
    ],
)

go_test(
    name = "go_raceoff_test",
    size = "medium",
    srcs = [
        "blockchain_test.go",
        "chain_info_test.go",
        "checktags_test.go",
        "execution_engine_test.go",
        "forkchoice_update_execution_test.go",
        "head_sync_committee_info_test.go",
        "head_test.go",
        "init_test.go",
        "log_test.go",
        "metrics_test.go",
        "mock_test.go",
        "process_attestation_test.go",
        "process_block_test.go",
        "receive_attestation_test.go",
        "receive_block_test.go",
        "service_test.go",
        "setup_forkchoice_test.go",
        "setup_test.go",
        "weak_subjectivity_checks_test.go",
    ],
    embed = [":blockchain"],
    gotags = ["develop"],
    deps = [
        "//async/event",
        "//beacon-chain/blockchain/testing",
        "//beacon-chain/cache/depositcache",
        "//beacon-chain/core/blocks",
        "//beacon-chain/core/helpers",
        "//beacon-chain/core/transition",
        "//beacon-chain/db",
        "//beacon-chain/db/testing",
        "//beacon-chain/execution",
        "//beacon-chain/execution/testing",
        "//beacon-chain/forkchoice/types",
        "//beacon-chain/p2p",
        "//beacon-chain/state/state-native",
        "//beacon-chain/state/stateutil",
        "//config/fieldparams",
        "//config/params",
        "//consensus-types/blocks",
        "//consensus-types/blocks/testing",
        "//container/trie",
        "//encoding/bytesutil",
        "//proto/qrysm/v1alpha1",
        "//testing/assert",
        "//testing/require",
        "//testing/util",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_sirupsen_logrus//hooks/test",
        "@com_github_theqrl_go_zond//:go-zond",
        "@com_github_theqrl_go_zond//common",
        "@com_github_theqrl_go_zond//core/types",
        "@in_gopkg_d4l3k_messagediff_v1//:messagediff_v1",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "go_raceon_test",
    srcs = [
        "chain_info_norace_test.go",
        "checktags_test.go",
        "init_test.go",
        "mock_test.go",
        "receive_block_test.go",
        "service_norace_test.go",
        "setup_test.go",
    ],
    embed = [":blockchain"],
    gc_goopts = [
        # Go 1.14 enables checkptr by default when building with -race or -msan. There is a pointer
        # issue in boltdb, so must disable checkptr at compile time. This flag can be removed once
        # the project is migrated to etcd's version of boltdb and the issue has been fixed.
        # See: https://github.com/etcd-io/bbolt/issues/187.
        "-d=checkptr=0",
    ],
    gotags = ["develop"],
    race = "on",
    tags = ["race_on"],
    deps = [
        "//async/event",
        "//beacon-chain/blockchain/testing",
        "//beacon-chain/cache/depositcache",
        "//beacon-chain/core/blocks",
        "//beacon-chain/core/helpers",
        "//beacon-chain/core/transition",
        "//beacon-chain/db",
        "//beacon-chain/db/testing",
        "//beacon-chain/execution",
        "//beacon-chain/execution/testing",
        "//beacon-chain/forkchoice/types",
        "//beacon-chain/p2p",
        "//config/params",
        "//consensus-types/blocks",
        "//consensus-types/blocks/testing",
        "//container/trie",
        "//encoding/bytesutil",
        "//proto/qrysm/v1alpha1",
        "//testing/assert",
        "//testing/require",
        "//testing/util",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_sirupsen_logrus//hooks/test",
        "@com_github_theqrl_go_zond//:go-zond",
        "@com_github_theqrl_go_zond//common",
        "@com_github_theqrl_go_zond//core/types",
        "@org_golang_google_protobuf//proto",
    ],
)