load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "builder",
    srcs = [
        "metric.go",
        "option.go",
        "service.go",
    ],
    importpath = "github.com/theQRL/qrysm/beacon-chain/builder",
    visibility = ["//visibility:public"],
    deps = [
        "//api/client/builder",
        "//beacon-chain/blockchain",
        "//beacon-chain/cache",
        "//beacon-chain/db",
        "//cmd/beacon-chain/flags",
        "//config/fieldparams",
        "//consensus-types/interfaces",
        "//consensus-types/primitives",
        "//encoding/bytesutil",
        "//monitoring/tracing",
        "//proto/qrysm/v1alpha1",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_urfave_cli_v2//:cli",
        "@io_opencensus_go//trace",
    ],
)

go_test(
    name = "builder_test",
    srcs = ["service_test.go"],
    embed = [":builder"],
    deps = [
        "//api/client/builder/testing",
        "//beacon-chain/blockchain/testing",
        "//beacon-chain/db/testing",
        "//config/fieldparams",
        "//encoding/bytesutil",
        "//proto/qrysm/v1alpha1",
        "//testing/assert",
        "//testing/require",
    ],
)
