load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "cache",
    srcs = [
        "active_balance.go",
        "active_balance_disabled.go",  # keep
        "attestation_data.go",
        "checkpoint_state.go",
        "committee.go",
        "committee_disabled.go",  # keep
        "committees.go",
        "common.go",
        "doc.go",
        "error.go",
        "interfaces.go",
        "payload_id.go",
        "proposer_indices.go",
        "proposer_indices_disabled.go",  # keep
        "proposer_indices_type.go",
        "registration.go",
        "skip_slot_cache.go",
        "subnet_ids.go",
        "sync_committee.go",
        "sync_committee_disabled.go",  # keep
        "sync_committee_head_state.go",
        "sync_subnet_ids.go",
    ],
    importpath = "github.com/theQRL/qrysm/beacon-chain/cache",
    visibility = [
        "//beacon-chain:__subpackages__",
        "//testing/spectest:__subpackages__",
        "//tools:__subpackages__",
    ],
    deps = [
        "//beacon-chain/state",
        "//cache/lru",
        "//config/fieldparams",
        "//config/params",
        "//consensus-types/primitives",
        "//container/slice",
        "//crypto/hash",
        "//crypto/rand",
        "//encoding/bytesutil",
        "//math",
        "//proto/qrysm/v1alpha1",
        "@com_github_hashicorp_golang_lru//:golang-lru",
        "@com_github_patrickmn_go_cache//:go-cache",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_theqrl_go_zond//common",
        "@io_k8s_client_go//tools/cache",
        "@io_opencensus_go//trace",
    ],
)

go_test(
    name = "cache_test",
    size = "small",
    srcs = [
        "active_balance_test.go",
        "attestation_data_test.go",
        "cache_test.go",
        "checkpoint_state_test.go",
        "committee_fuzz_test.go",
        "committee_test.go",
        "payload_id_test.go",
        "proposer_indices_test.go",
        "registration_test.go",
        "skip_slot_cache_test.go",
        "subnet_ids_test.go",
        "sync_committee_head_state_test.go",
        "sync_committee_test.go",
        "sync_subnet_ids_test.go",
    ],
    embed = [":cache"],
    deps = [
        "//beacon-chain/state",
        "//beacon-chain/state/state-native",
        "//config/fieldparams",
        "//config/params",
        "//consensus-types/primitives",
        "//encoding/bytesutil",
        "//proto/qrysm/v1alpha1",
        "//testing/assert",
        "//testing/require",
        "//testing/util",
        "@com_github_google_gofuzz//:gofuzz",
        "@com_github_theqrl_go_zond//common/hexutil",
        "@org_golang_google_protobuf//proto",
    ],
)
