load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "db",
    srcs = [
        "alias.go",
        "db.go",
        "errors.go",
        "log.go",
        "restore.go",
    ],
    importpath = "github.com/theQRL/qrysm/beacon-chain/db",
    visibility = ["//visibility:public"],
    deps = [
        "//beacon-chain/db/iface",
        "//beacon-chain/db/kv",
        "//cmd",
        "//io/file",
        "//io/prompt",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_urfave_cli_v2//:cli",
    ],
)

go_test(
    name = "db_test",
    srcs = [
        "db_test.go",
        "restore_test.go",
    ],
    embed = [":db"],
    deps = [
        "//beacon-chain/db/kv",
        "//cmd",
        "//consensus-types/blocks",
        "//consensus-types/primitives",
        "//testing/assert",
        "//testing/require",
        "//testing/util",
        "@com_github_sirupsen_logrus//hooks/test",
        "@com_github_urfave_cli_v2//:cli",
    ],
)
