load("@qrysm//tools/go:def.bzl", "go_library")

go_library(
    name = "deterministic-genesis",
    srcs = [
        "log.go",
        "service.go",
    ],
    importpath = "github.com/theQRL/qrysm/beacon-chain/deterministic-genesis",
    visibility = ["//beacon-chain:__subpackages__"],
    deps = [
        "//beacon-chain/cache",
        "//beacon-chain/db",
        "//beacon-chain/execution",
        "//beacon-chain/state",
        "//beacon-chain/state/state-native",
        "//consensus-types/primitives",
        "//proto/engine/v1:engine",
        "//proto/qrysm/v1alpha1",
        "//runtime",
        "//runtime/interop",
        "//time/slots",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)
